crates/bin/src/bridge/tui/view/snapshots/chaz__bridge__tui__view__list_tests__add_agent_last_120x40.snap
---
source: crates/bin/src/bridge/tui/view/list_tests.rs
expression: "rows.join(\"\\n\")"
---
 Session Settings  —  Picker test                                                                            [Esc back] 
  Overview                                                                                                              
> Agents          Agents    30 attached                                                                                 
  Models          ─────                                                                                                 
  Routing                                                                                                               
  History       > agent-00        (no model)                                                                            
  Sharing         agent-01        (no model)                                                                            
                  agent-02        (no model)                                                                            
                  agent-03        (no model)                                                                            
                  agent-04        (no model)                                                                            
                  agent-05        (no model)                                                                            
                  agent-06        (no model)                                                                            
                  agent-07        (no model)                                                                            
                  agent-08        (no model)                                                                            
                  agent-09        (no model)                                                                            
                  agent-10        (no model)                                                                            
                  agent-11        (no model)                                                                            
                  agent-12        (no model)                                                                            
                  agent-13        (no model)                                                                            
                  agent-14        (no model)                                                                            
                  agent-15        (no model)                                                                            
                  agent-16        (no model)                                                                            
                  agent-17        (no model)                                                                            
                  agent-18        (no model)                                                                            
                  agent-19        (no model)                                                                            
                  agent-20        (no model)                                                                            
                  agent-21        (no model)                                                                            
                  agent-22        (no model)                                                                            
                  agent-23        (no model)                                                                            
                                                                                                                        
                  [a] add agent · [d] remove selected                                                                   
                 add agent: ▎                                                                                           
                    candidate-24                                                                                        
                    candidate-25                                                                                        
                    candidate-26                                                                                        
                    candidate-27                                                                                        
                    candidate-28                                                                                        
                  > candidate-29                                                                                        
                  ↑↓ select · enter add · esc cancel                                                                    
 type to filter · ↑↓ select · enter add · esc cancel
